--- a/Start_menu.html
+++ b/Start_menu.html
@@ -4,26 +4,41 @@
 <title>PolyKingdom</title>
 
 <style>
-body, html {
-  height: 100%;
-}
 
-.bg {
+        .left {
+            position: absolute;
+            width: 50px;
+            height: 50px;
+            background-color: blue;
+            max-height: 100%;
+            right:0;
+   
+        }
+        .bg_div {
+            position: absolute;
 
-  /* Full height */
-  height: 100%;
-  width: 100%;
+            height: 100%;
+            width: 100%;
+            left:0;
+            background-color:rgb(168,101,84);
+            top:0;
+   
+        }
+        .bg {
+            position: absolute;
+            max-height: 100%;
+            left:0;
+   
+        }
 
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
 </style>
 
 </head>
 <body>
+    <div class="bg_div">
     <img  class="bg" src="assets/images/Main_Menu.png" alt="Home_Menu">
+    </div>
+
 
 
 </body>
