Added gam menu, vicoty menu and defeat menu

--- a/Game_Over.html
+++ b/Game_Over.html
@@ -143,9 +143,7 @@ h1 {
     <div class="main_menu" >
     <p class="title">Game over</p>
 
-    <button class="button" onclick="myFunction()">Main menu</button>
-    <br>
-    <a class="button" href="javascript:window.open('','_self').close();">Exit</a>
+    <button class="button" onclick="window.location.replace('Start_menu.html');">Main menu</button>
     </div>
 
 
@@ -157,13 +155,7 @@ h1 {
 
 
 
-    <script>
-        function myFunction() {
 
-            window.open("Start_menu.html");
-            window.open('','_self').close();
-        }
-    </script>
 
 </body>
 </html>
