--- a/Start_menu.html
+++ b/Start_menu.html
@@ -183,13 +183,13 @@ h1 {
 
     <p class="title">PolyKingdom</p>
     <div class="main_menu">
-    <button class="button" onclick="myFunction()">Start Game</button>
+    <button class="button" onclick="window.location.replace('index.html');">Start Game</button>
     <br>
     <a class="button" href="#popup1">How to play</a>
     <br>
     <a class="button" href="#about">About</a>
     <br>
-    <a class="button" href="javascript:window.open('','_self').close();">Exit</a>
+    <a class="button">Exit</a>
     </div>
 
 
@@ -229,15 +229,6 @@ h1 {
     <!--POPUP-->
 
 
-
-
-    <script>
-        function myFunction() {
-
-            window.open("index.html");
-            window.open('','_self').close();
-        }
-    </script>
 
 </body>
 </html>
