--- a/Victory.html
+++ b/Victory.html
@@ -143,9 +143,7 @@ h1 {
     <div class="main_menu" >
     <p class="title">You won!</p>
 
-    <button class="button" onclick="myFunction()">Main menu</button>
-    <br>
-    <a class="button" href="javascript:window.open('','_self').close();">Exit</a>
+    <button class="button" onclick="window.location.replace('Start_menu.html');">Main menu</button>
     </div>
 
 
@@ -155,15 +153,6 @@ h1 {
     <!--POPUP-->
 
 
-
-
-    <script>
-        function myFunction() {
-
-            window.open("Start_menu.html");
-            window.open('','_self').close();
-        }
-    </script>
 
 </body>
 </html>
