Fixed naming scheme

--- a/Start_menu.html
+++ b/Start_menu.html
@@ -178,7 +178,7 @@ h1 {
 
 
     <div class="bg_div" >
-    <img  class="bg" src="assets/images/Main_Menu.png" alt="Home_Menu">
+    <img  class="bg" src="assets/images/MainMenu.png" alt="Home_Menu">
     </div>
 
     <p class="title">PolyKingdom</p>
