Revert "Fixed website configuration"
This reverts commit 7dcb4890d676559d286557b35c9fc4f3feb59d20.

--- a/Game_Over.html
+++ b/Game_Over.html
@@ -143,7 +143,7 @@ h1 {
     <div class="main_menu" >
     <p class="title">Game over</p>
 
-    <button class="button" onclick="window.location.replace('index.html');">Main menu</button>
+    <button class="button" onclick="window.location.replace('Start_menu.html');">Main menu</button>
     </div>
 
 
