--- a/index.html
+++ b/index.html
@@ -1,234 +1,82 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<link rel="shortcut icon" type="image/png" href="assets/images/favicon.ico"/>
-<title>PolyKingdom</title>
+    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.ico"/>
 
-<style>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>glTF Sample Viewer</title>
 
-        .left {
-            position: relative;
-            width: 50px;
-            height: 50px;
-            background-color: blue;
-            max-height: 100%;
-            right:0;
-   
-        }
-        .bg_div {
+    <meta name="author" content="Khronos Group Inc.">
+    <meta name="description" content="The official glTF sample viewer">
+    <meta name="keywords" content="glTF, WebGL, Sample, Viewer, PBR">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="styles.css">
+
+    <script src="libs/dat.gui.min.js"></script>
+    <script src="libs/stats.min.js"></script>
+
+    <script src="dist/gltf-reference-viewer.umd.js"></script>
+
+    <style>
+
+        .health_bar{
             position: absolute;
+            width:20%;
+            height:100px;
+            top:10px;
+        }
+        .meter {
+            height: 20px;  /* Can be anything */
+            position: relative;
+            background: #555;
+            -moz-border-radius: 25px;
+            -webkit-border-radius: 25px;
+            border-radius: 25px;
+            padding: 10px;
+            box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);
+        }
 
+        .meter > span {
+            display: block;
             height: 100%;
-            width: 100%;
-            left:0;
-            background-color:rgb(168,101,84);
-            top:0;
-   
-        }
-        .bg {
-            position: absolute;
-            max-height: 100%;
-            left:0;
-
-        }
-        .main_menu {
-
-            position: absolute;
-            text-align: center;
-            max-height: 100%;
-            right:3%;
-            top:30%;
-
-        }
-
-        .buttons{
-            background-color:rgb(168,101,84);
-            padding: 15px 100px;
-            text-decoration: none;
-            font-weight: bold;
-            border: none;
-            text-align: center;
-            display: inline-block;
-            font-size: 30px;
-            color: white;
-        }
-        .title{
+            border-top-right-radius: 8px;
+            border-bottom-right-radius: 8px;
+            border-top-left-radius: 20px;
+            border-bottom-left-radius: 20px;
+            background-color: rgb(43,194,83);
+            background-image: linear-gradient(
+                    center bottom,
+                    rgb(43,194,83) 37%,
+                    rgb(84,240,84) 69%
+            );
+            box-shadow:
+                    inset 0 2px 9px  rgba(255,255,255,0.3),
+                    inset 0 -2px 6px rgba(0,0,0,0.4);
             position: relative;
-            padding: 15px 100px;
-            text-decoration: none;
-            font-weight: bold;
-            border: none;
-            text-align: center;
-            font-size: 50px;
-            color: white;
-            top:0%;
-            left:530px;
+            overflow: hidden;
+        }
 
+        .red > span {
+            background-color: #f0a3a3;
+            background-image: linear-gradient(to bottom, #f0a3a3, #f42323);
         }
 
 
-    /*POP up*/
 
-    body {
-  font-family: Arial, sans-serif;
-  background-size: cover;
-  height: 100vh;
-}
 
-h1 {
-  text-align: center;
-  font-family: Tahoma, Arial, sans-serif;
-  color:rgb(168,101,84);
-  margin: 80px 0;
-}
-
-.box {
-  width: 40%;
-  margin: 0 auto;
-  background: rgba(255,255,255,0.2);
-  padding: 35px;
-  border: 2px solid #fff;
-  border-radius: 20px/50px;
-  background-clip: padding-box;
-  text-align: center;
-}
-
-.button {
-    background-color:rgb(168,101,84);
-    padding: 15px 100px;
-    text-decoration: none;
-    font-weight: bold;
-    border: none;
-    text-align: center;
-    display: inline-block;
-    font-size: 30px;
-    color: white;
-  transition: all 0.3s ease-out;
-}
-.button:hover {
-  background: white;
-  color:rgb(168,101,84);;
-}
-
-.overlay {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: rgba(0, 0, 0, 0.7);
-  transition: opacity 500ms;
-  visibility: hidden;
-  opacity: 0;
-}
-.overlay:target {
-  visibility: visible;
-  opacity: 1;
-}
-
-.popup {
-  margin: 70px auto;
-  padding: 20px;
-  background: #fff;
-  border-radius: 5px;
-  width: 30%;
-  position: relative;
-  transition: all 5s ease-in-out;
-}
-
-.popup h2 {
-  margin-top: 0;
-  color: #333;
-  font-family: Tahoma, Arial, sans-serif;
-}
-.popup .close {
-  position: absolute;
-  top: 20px;
-  right: 30px;
-  transition: all 200ms;
-  font-size: 30px;
-  font-weight: bold;
-  text-decoration: none;
-  color: #333;
-}
-.popup .close:hover {
-  color:rgb(168,101,84);
-}
-.popup .content {
-  max-height: 30%;
-  overflow: auto;
-}
-
-@media screen and (max-width: 700px){
-  .box{
-    width: 70%;
-  }
-  .popup{
-    width: 70%;
-  }
-}
-
-</style>
-
+    </style>
 </head>
-<body scroll="no" style="overflow: hidden">
 
-
-    
-
-
-    <div class="bg_div" >
-    <img  class="bg" src="assets/images/MainMenu.png" alt="Home_Menu">
-    </div>
-
-    <p class="title">PolyKingdom</p>
-    <div class="main_menu">
-    <button class="button" onclick="window.location.replace('game.html');">Start Game</button>
-    <br>
-    <a class="button" href="#popup1">How to play</a>
-    <br>
-    <a class="button" href="#about">About</a>
-    <br>
-    <a class="button">Exit</a>
-    </div>
-
-
-
-    <div id="popup1" class="overlay">
-        <div class="popup">
-            <h2>How to play</h2>
-            <a class="close" href="#">&times;</a>
-            <div class="content">
-            <p style="font-weight: bold;">Introduction</p>
-            <a>The goal of the game is to defeat all the enemies in the goblin camps outside of the castle.</a>
-            <br><br>
-            <p style="font-weight: bold;"> Movment</p>
-            <a>The player moves using W,S,D,A keys and attack with the space key.</a>
-            <br><br>
-            <p style="font-weight: bold;">Camera</p>
-            <a>Player camera can be rotated using the mouse. Pressing R will reset the camera to its original position.</a>
-            </div>
+<!-- Just create a rendering canvas like below and call gltf_rv! -->
+<body onload="viewer = gltf_rv.gltf_rv('canvas', 'assets/models/2.0/model-index.json');">
+    <div class="health_bar">
+        <div class="meter red">
+            <span  id="healtBar" style="width: 100%"></span>
         </div>
-
     </div>
-
-    <div id="about" class="overlay">
-        <div class="popup">
-            <h2>About</h2>
-            <a class="close" href="#">&times;</a>
-            <div class="content">
-                This game was made by Sebastjan Mevlja and Beti Piščanec.
-            </div>
-        </div>
-
-    </div>
-
-
-
-
-    <!--POPUP-->
-
-
-
+    <div id="gltf-rv-model-spinner"> </div>
+    <canvas id="canvas">No Canvas!</canvas>
 </body>
 </html>
