--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </head>
 
 <!-- Just create a rendering canvas like below and call gltf_rv! -->
-<body onload="viewer = gltf_rv.gltf_rv('canvas', 'assets/models/model-index.json');">
+<body onload="viewer = gltf_rv.main('canvas', 'assets/models/model-index.json');">
     <div class="health_bar">
         <div class="meter red">
             <span  id="healtBar" style="width: 100%"></span>
