--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.ico"/>
 
     <meta charset="utf-8" />
-    <title>glTF Sample Viewer</title>
+    <title>PolyKingdom</title>
 
 
     <link rel="stylesheet" href="styles.css">
@@ -62,7 +62,7 @@
 </head>
 
 <!-- Just create a rendering canvas like below and call gltf_rv! -->
-<body onload="viewer = gltf_rv.main('canvas', 'assets/models/model-index.json');">
+<body onload="gltf_rv.main();">
     <div class="health_bar">
         <div class="meter red">
             <span  id="healtBar" style="width: 100%"></span>
