--- a/Start_menu.html
+++ b/Start_menu.html
@@ -200,13 +200,13 @@ h1 {
             <a class="close" href="#">&times;</a>
             <div class="content">
             <p style="font-weight: bold;">Introduction</p>
-            <a>The goal of the game is to defeat all the enemies in the goblin camps outside of the castle.</a>
+            <a>The goal of the game is to defeat all the enemies in the barbarian camps outside of the castle.</a>
             <br><br>
             <p style="font-weight: bold;"> Movment</p>
-            <a>The player moves using W,S,D,A keys and attack with the space key.</a>
+            <a>The player moves using W,S,D,A keys and attack with the Space key.</a>
             <br><br>
             <p style="font-weight: bold;">Camera</p>
-            <a>Player camera can be rotated using the mouse. Pressing R will reset the camera to its original position.</a>
+            <a>Player camera can be rotated by holding the left mouse key and moving the mouse. Pressing R will reset the camera to its original position.</a>
             </div>
         </div>
 
