--- a/Victory.html
+++ b/Victory.html
@@ -143,7 +143,7 @@ h1 {
     <div class="main_menu" >
     <p class="title">You won!</p>
 
-    <button class="button" onclick="window.location.replace('Start_menu.html');">Back to Main menu</button>
+    <button class="button" onclick="window.location.replace('Start_menu.html');">Back to the Main menu</button>
     </div>
 
 
