--- a/Start_menu.html
+++ b/Start_menu.html
@@ -36,7 +36,7 @@
             position: absolute;
             text-align: center;
             max-height: 100%;
-            right:1%;
+            margin-left: 68%;
             top:15%;
 
         }
