changed loading screen color

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             margin: auto;
             border: 16px solid #f3f3f3;
             pointer-events: none;
-            border-top: 16px solid #86C540;
+            border-top: 16px solid deepskyblue;
             border-radius: 50%;
             width: 100px;
             height: 100px;
