--- a/Start_menu.html
+++ b/Start_menu.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-<link rel="shortcut icon" type="image/png" href="assets/images/favicon.ico"/>
-<title>PolyKingdom</title>
+    <link rel="shortcut icon" type="image/png" href="assets/images/favicon.ico"/>
+    <title>PolyKingdom</title>
 
-<style>
+    <style>
 
         .left {
             position: relative;
@@ -13,37 +13,40 @@
             height: 50px;
             background-color: blue;
             max-height: 100%;
-            right:0;
-   
+            right: 0;
+
         }
+
         .bg_div {
             position: absolute;
 
             height: 100%;
             width: 100%;
-            left:0;
-            background-color:rgb(168,101,84);
-            top:0;
-   
+            left: 0;
+            background-color: rgb(168, 101, 84);
+            top: 0;
+
         }
+
         .bg {
             position: absolute;
             max-height: 100%;
-            left:0;
+            left: 0;
 
         }
+
         .main_menu {
 
             position: absolute;
             text-align: center;
             max-height: 100%;
             margin-left: 75%;
-            top:15%;
+            top: 15%;
 
         }
 
-        .buttons{
-            background-color:rgb(168,101,84);
+        .buttons {
+            background-color: rgb(168, 101, 84);
             padding: 15px 100px;
             text-decoration: none;
             font-weight: bold;
@@ -53,7 +56,8 @@
             font-size: 30px;
             color: white;
         }
-        .title{
+
+        .title {
             padding: 15px 100px;
             text-decoration: none;
             font-weight: bold;
@@ -61,141 +65,143 @@
             text-align: center;
             font-size: 50px;
             color: white;
-            top:0%;
+            top: 0%;
         }
 
 
-    /*POP up*/
+        /*POP up*/
 
-    body {
-  font-family: Arial, sans-serif;
-  background-size: cover;
-  height: 100vh;
-}
+        body {
+            font-family: Arial, sans-serif;
+            background-size: cover;
+            height: 100vh;
+        }
 
-h1 {
-  text-align: center;
-  font-family: Tahoma, Arial, sans-serif;
-  color:rgb(168,101,84);
-  margin: 80px 0;
-}
+        h1 {
+            text-align: center;
+            font-family: Tahoma, Arial, sans-serif;
+            color: rgb(168, 101, 84);
+            margin: 80px 0;
+        }
 
-.box {
-  width: 40%;
-  margin: 0 auto;
-  background: rgba(255,255,255,0.2);
-  padding: 35px;
-  border: 2px solid #fff;
-  border-radius: 20px/50px;
-  background-clip: padding-box;
-  text-align: center;
-}
+        .box {
+            width: 40%;
+            margin: 0 auto;
+            background: rgba(255, 255, 255, 0.2);
+            padding: 35px;
+            border: 2px solid #fff;
+            border-radius: 20px/50px;
+            background-clip: padding-box;
+            text-align: center;
+        }
 
-.button {
-    background-color:rgb(168,101,84);
-    padding: 15px 100px;
-    text-decoration: none;
-    font-weight: bold;
-    border: none;
-    text-align: center;
-    display: inline-block;
-    font-size: 30px;
-    color: white;
-  transition: all 0.3s ease-out;
-}
-.button:hover {
-  background: white;
-  color:rgb(168,101,84);;
-}
+        .button {
+            background-color: rgb(168, 101, 84);
+            padding: 15px 100px;
+            text-decoration: none;
+            font-weight: bold;
+            border: none;
+            text-align: center;
+            display: inline-block;
+            font-size: 30px;
+            color: white;
+            transition: all 0.3s ease-out;
+        }
 
-.overlay {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: rgba(0, 0, 0, 0.7);
-  transition: opacity 500ms;
-  visibility: hidden;
-  opacity: 0;
-}
-.overlay:target {
-  visibility: visible;
-  opacity: 1;
-}
+        .button:hover {
+            background: white;
+            color: rgb(168, 101, 84);;
+        }
 
-.popup {
-  margin: 70px auto;
-  padding: 20px;
-  background: #fff;
-  border-radius: 5px;
-  width: 30%;
-  position: relative;
-  transition: all 5s ease-in-out;
-}
+        .overlay {
+            position: fixed;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background: rgba(0, 0, 0, 0.7);
+            transition: opacity 500ms;
+            visibility: hidden;
+            opacity: 0;
+        }
 
-.popup h2 {
-  margin-top: 0;
-  color: #333;
-  font-family: Tahoma, Arial, sans-serif;
-}
-.popup .close {
-  position: absolute;
-  top: 20px;
-  right: 30px;
-  transition: all 200ms;
-  font-size: 30px;
-  font-weight: bold;
-  text-decoration: none;
-  color: #333;
-}
-.popup .close:hover {
-  color:rgb(168,101,84);
-}
-.popup .content {
-  max-height: 30%;
-  overflow: auto;
-}
+        .overlay:target {
+            visibility: visible;
+            opacity: 1;
+        }
 
-@media screen and (max-width: 700px){
-  .box{
-    width: 70%;
-  }
-  .popup{
-    width: 70%;
-  }
-}
+        .popup {
+            margin: 70px auto;
+            padding: 20px;
+            background: #fff;
+            border-radius: 5px;
+            width: 30%;
+            position: relative;
+            transition: all 5s ease-in-out;
+        }
 
-</style>
+        .popup h2 {
+            margin-top: 0;
+            color: #333;
+            font-family: Tahoma, Arial, sans-serif;
+        }
+
+        .popup .close {
+            position: absolute;
+            top: 20px;
+            right: 30px;
+            transition: all 200ms;
+            font-size: 30px;
+            font-weight: bold;
+            text-decoration: none;
+            color: #333;
+        }
+
+        .popup .close:hover {
+            color: rgb(168, 101, 84);
+        }
+
+        .popup .content {
+            max-height: 30%;
+            overflow: auto;
+        }
+
+        @media screen and (max-width: 700px) {
+            .box {
+                width: 70%;
+            }
+
+            .popup {
+                width: 70%;
+            }
+        }
+
+    </style>
 
 </head>
 <body scroll="no" style="overflow: hidden">
 
 
-    
+<div class="bg_div">
+    <img class="bg" src="assets/images/MainMenu.png" alt="Home_Menu">
+</div>
 
 
-    <div class="bg_div" >
-    <img  class="bg" src="assets/images/MainMenu.png" alt="Home_Menu">
-    </div>
-
-    
-    <div class="main_menu">
-     <p class="title">PolyKingdom</p>
+<div class="main_menu">
+    <p class="title">PolyKingdom</p>
     <button class="button" onclick="window.location.replace('index.html');">Start Game</button>
     <br>
     <a class="button" href="#popup1">How to play</a>
     <br>
     <a class="button" href="#about">About</a>
-    </div>
+</div>
 
 
-
-    <div id="popup1" class="overlay">
-        <div class="popup">
-            <h2>How to play</h2>
-            <a class="close" href="#">&times;</a>
-            <div class="content">
+<div id="popup1" class="overlay">
+    <div class="popup">
+        <h2>How to play</h2>
+        <a class="close" href="#">&times;</a>
+        <div class="content">
             <p style="font-weight: bold;">Introduction</p>
             <a>The goal of the game is to defeat all the enemies in the barbarian camps outside of the castle.</a>
             <br><br>
@@ -203,28 +209,26 @@ h1 {
             <a>The player moves using W,S,D,A keys and attack with the Space key.</a>
             <br><br>
             <p style="font-weight: bold;">Camera</p>
-            <a>Player camera can be rotated by holding the left mouse key and moving the mouse. Pressing R will reset the camera to its original position.</a>
-            </div>
+            <a>Player camera can be rotated by holding the left mouse key and moving the mouse. Pressing R will reset
+                the camera to its original position.</a>
         </div>
-
     </div>
 
-    <div id="about" class="overlay">
-        <div class="popup">
-            <h2>About</h2>
-            <a class="close" href="#">&times;</a>
-            <div class="content">
-                This game was made by Sebastjan Mevlja and Beti Piščanec.
-            </div>
-        </div>
+</div>
 
+<div id="about" class="overlay">
+    <div class="popup">
+        <h2>About</h2>
+        <a class="close" href="#">&times;</a>
+        <div class="content">
+            This game was made by Sebastjan Mevlja and Beti Piščanec.
+        </div>
     </div>
 
+</div>
 
 
-
-    <!--POPUP-->
-
+<!--POPUP-->
 
 
 </body>
