--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             width: 169px;
         }
 
-        #gltf-rv-model-spinner {
+        #loadSpinner {
             position: absolute;
             top: 0;
             left: 0;
@@ -111,7 +111,7 @@
             <span  id="healtBar" style="width: 100%"></span>
         </div>
     </div>
-    <div id="gltf-rv-model-spinner"> </div>
+    <div id="loadSpinner"> </div>
     <canvas id="canvas">No Canvas!</canvas>
 </body>
 </html>
