Main Manu optimized
OPTIMIZED

--- a/Start_menu.html
+++ b/Start_menu.html
@@ -4,197 +4,33 @@
     <meta charset="utf-8"/>
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.ico"/>
     <title>PolyKingdom</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
-    <style>
-
-        .left {
-            position: relative;
-            width: 50px;
-            height: 50px;
-            background-color: blue;
-            max-height: 100%;
-            right: 0;
-
-        }
-
-        .bg_div {
-            position: absolute;
-
-            height: 100%;
-            width: 100%;
-            left: 0;
-            background-color: rgb(168, 101, 84);
-            top: 0;
-
-        }
-
-        .bg {
-            position: absolute;
-            max-height: 100%;
-            left: 0;
-
-        }
-
-        .main_menu {
-
-            position: absolute;
-            text-align: center;
-            max-height: 100%;
-            margin-left: 75%;
-            top: 15%;
-
-        }
-
-        .buttons {
-            background-color: rgb(168, 101, 84);
-            padding: 15px 100px;
-            text-decoration: none;
-            font-weight: bold;
-            border: none;
-            text-align: center;
-            display: inline-block;
-            font-size: 30px;
-            color: white;
-        }
-
-        .title {
-            padding: 15px 100px;
-            text-decoration: none;
-            font-weight: bold;
-            border: none;
-            text-align: center;
-            font-size: 50px;
-            color: white;
-            top: 0%;
-        }
-
-
-        /*POP up*/
-
-        body {
-            font-family: Arial, sans-serif;
-            background-size: cover;
-            height: 100vh;
-        }
-
-        h1 {
-            text-align: center;
-            font-family: Tahoma, Arial, sans-serif;
-            color: rgb(168, 101, 84);
-            margin: 80px 0;
-        }
-
-        .box {
-            width: 40%;
-            margin: 0 auto;
-            background: rgba(255, 255, 255, 0.2);
-            padding: 35px;
-            border: 2px solid #fff;
-            border-radius: 20px/50px;
-            background-clip: padding-box;
-            text-align: center;
-        }
-
-        .button {
-            background-color: rgb(168, 101, 84);
-            padding: 15px 100px;
-            text-decoration: none;
-            font-weight: bold;
-            border: none;
-            text-align: center;
-            display: inline-block;
-            font-size: 30px;
-            color: white;
-            transition: all 0.3s ease-out;
-        }
-
-        .button:hover {
-            background: white;
-            color: rgb(168, 101, 84);;
-        }
-
-        .overlay {
-            position: fixed;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            background: rgba(0, 0, 0, 0.7);
-            transition: opacity 500ms;
-            visibility: hidden;
-            opacity: 0;
-        }
-
-        .overlay:target {
-            visibility: visible;
-            opacity: 1;
-        }
-
-        .popup {
-            margin: 70px auto;
-            padding: 20px;
-            background: #fff;
-            border-radius: 5px;
-            width: 30%;
-            position: relative;
-            transition: all 5s ease-in-out;
-        }
-
-        .popup h2 {
-            margin-top: 0;
-            color: #333;
-            font-family: Tahoma, Arial, sans-serif;
-        }
-
-        .popup .close {
-            position: absolute;
-            top: 20px;
-            right: 30px;
-            transition: all 200ms;
-            font-size: 30px;
-            font-weight: bold;
-            text-decoration: none;
-            color: #333;
-        }
-
-        .popup .close:hover {
-            color: rgb(168, 101, 84);
-        }
-
-        .popup .content {
-            max-height: 30%;
-            overflow: auto;
-        }
-
-        @media screen and (max-width: 700px) {
-            .box {
-                width: 70%;
-            }
-
-            .popup {
-                width: 70%;
-            }
-        }
-
-    </style>
 
 </head>
 <body scroll="no" style="overflow: hidden">
 
+<div id="main_menu_box">
+    <div id="main_menu">
 
-<div class="bg_div">
-    <img class="bg" src="assets/images/MainMenu.png" alt="Home_Menu">
+        <a class="button" onclick="myFunction()">Start Game</a>
+        <a class="button" href="#popup1">How to play</a>
+        <a class="button" href="#about">About</a>
+
+
+    </div>
+
 </div>
 
 
-<div class="main_menu">
-    <p class="title">PolyKingdom</p>
-    <button class="button" onclick="window.location.replace('index.html');">Start Game</button>
-    <br>
-    <a class="button" href="#popup1">How to play</a>
-    <br>
-    <a class="button" href="#about">About</a>
-</div>
+<!--<a class="button" href="#popup1">How to play</a> -->
+
+
+
+
+
+
+
 
 
 <div id="popup1" class="overlay">
@@ -211,10 +47,20 @@
             <p style="font-weight: bold;">Camera</p>
             <a>Player camera can be rotated by holding the left mouse key and moving the mouse. Pressing R will reset
                 the camera to its original position.</a>
+            <br><br>
+            <p style="font-weight: bold;">Health</p>
+            <a>The player has a health bar, getting hit by enemies will result in the player loosing health points, these can be restored by finding hearts scattered around the map.</a>
+            <br><br>
+            <p style="font-weight: bold;">Music</p>
+            <a>Pressing the M key will play background music.</a>
+
         </div>
     </div>
 
 </div>
+
+
+
 
 <div id="about" class="overlay">
     <div class="popup">
@@ -228,8 +74,15 @@
 </div>
 
 
-<!--POPUP-->
+<script>
+    function myFunction() {
 
+        window.open("index.html","_self");
+    }
+</script>
 
 </body>
+
+
+
 </html>
