--- a/Start_menu.html
+++ b/Start_menu.html
@@ -26,30 +26,24 @@
 <!--<a class="button" href="#popup1">How to play</a> -->
 
 
-
-
-
-
-
-
-
 <div id="popup1" class="overlay">
     <div class="popup">
         <h2>How to play</h2>
         <a class="close" href="#">&times;</a>
         <div class="content">
             <p style="font-weight: bold;">Introduction</p>
-            <a>The goal of the game is to defeat all the enemies in the barbarian camps outside of the castle.</a>
+            <a>The goal of the game is to defeat all of the enemies in the barbarian camps outside of the castle.</a>
             <br><br>
             <p style="font-weight: bold;"> Movment</p>
-            <a>The player moves using W,S,D,A keys and attack with the Space key.</a>
+            <a>The player moves using W,A,S,D keys and attacks with the Space key.</a>
             <br><br>
             <p style="font-weight: bold;">Camera</p>
             <a>Player camera can be rotated by holding the left mouse key and moving the mouse. Pressing R will reset
-                the camera to its original position.</a>
+                the camera to it's original position.</a>
             <br><br>
             <p style="font-weight: bold;">Health</p>
-            <a>The player has a health bar, getting hit by enemies will result in the player loosing health points, these can be restored by finding hearts scattered around the map.</a>
+            <a> In the top left corner is The player's health bar. Getting hit by enemies will result in the player loosing health points,
+                which can be restored by finding hearts scattered around the map.</a>
             <br><br>
             <p style="font-weight: bold;">Music</p>
             <a>Pressing the M key will play background music.</a>
@@ -58,8 +52,6 @@
     </div>
 
 </div>
-
-
 
 
 <div id="about" class="overlay">
@@ -77,12 +69,11 @@
 <script>
     function myFunction() {
 
-        window.open("index.html","_self");
+        window.open("index.html", "_self");
     }
 </script>
 
 </body>
-
 
 
 </html>
