--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="shortcut icon" type="image/png" href="assets/images/favicon.ico"/>
 
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title>PolyKingdom</title>
 
 
@@ -11,22 +11,23 @@
 
     <style>
 
-        .health_bar{
+        .health_bar {
             position: absolute;
-            width:20%;
-            height:100px;
-            top:10px;
+            width: 20%;
+            height: 100px;
+            top: 10px;
             display: none;
         }
+
         .meter {
-            height: 20px;  /* Can be anything */
+            height: 20px; /* Can be anything */
             position: relative;
             background: #555;
             -moz-border-radius: 25px;
             -webkit-border-radius: 25px;
             border-radius: 25px;
             padding: 10px;
-            box-shadow: inset 0 -1px 1px rgba(255,255,255,0.3);
+            box-shadow: inset 0 -1px 1px rgba(255, 255, 255, 0.3);
         }
 
         .meter > span {
@@ -36,15 +37,14 @@
             border-bottom-right-radius: 8px;
             border-top-left-radius: 20px;
             border-bottom-left-radius: 20px;
-            background-color: rgb(43,194,83);
+            background-color: rgb(43, 194, 83);
             background-image: linear-gradient(
                     center bottom,
-                    rgb(43,194,83) 37%,
-                    rgb(84,240,84) 69%
+                    rgb(43, 194, 83) 37%,
+                    rgb(84, 240, 84) 69%
             );
-            box-shadow:
-                    inset 0 2px 9px  rgba(255,255,255,0.3),
-                    inset 0 -2px 6px rgba(0,0,0,0.4);
+            box-shadow: inset 0 2px 9px rgba(255, 255, 255, 0.3),
+            inset 0 -2px 6px rgba(0, 0, 0, 0.4);
             position: relative;
             overflow: hidden;
         }
@@ -64,8 +64,8 @@
         }
 
         #canvas {
-            width:  100%;
-            margin:  0px;
+            width: 100%;
+            margin: 0px;
             height: 100%;
             background: rgb(51, 51, 51);
         }
@@ -95,24 +95,25 @@
         }
 
         @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
+            0% {
+                transform: rotate(0deg);
+            }
+            100% {
+                transform: rotate(360deg);
+            }
         }
-
-
-
 
 
     </style>
 </head>
 
 <body onload="PolyKingdom.main();">
-    <div class="health_bar" id="health_bar">
-        <div class="meter red">
-            <span  id="healtBar" style="width: 100%"></span>
-        </div>
+<div class="health_bar" id="health_bar">
+    <div class="meter red">
+        <span id="healtBar" style="width: 100%"></span>
     </div>
-    <div id="loadSpinner"> </div>
-    <canvas id="canvas">No Canvas!</canvas>
+</div>
+<div id="loadSpinner"></div>
+<canvas id="canvas">No Canvas!</canvas>
 </body>
 </html>
